--- a/smartLock/app/src/main/res/layout/activity_login.xml
+++ b/smartLock/app/src/main/res/layout/activity_login.xml
@@ -46,6 +46,13 @@
             android:padding="12dp"
             android:text="Login"/>
 
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_connect"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:padding="12dp"
+            android:text="Connect"/>
+
     </LinearLayout>
 
 </ScrollView>
