--- a/smartLock/app/src/main/res/values/colors.xml
+++ b/smartLock/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#E5F2F5</color>
+
+    <color name="green">#99CC90</color>
+    <color name="red">#e60000</color>
 </resources>
